# smartp

./: .gitignore  .replit  README.md  pyproject.toml
smartprint/: .env  OneNote (Desktop)  example.env  google-services (1).json  json  manage.py  start_system.py  vendor_client.py
smartprint/print/: consumers.py  firebase_auth.py  routing.py  urls.py  views.py
smartprint/print/migrations/: 0001_initial.py  0002_delete_printjob.py  0003_initial.py  0004_delete_vendor.py
smartprint/print_jobs_storage/metadata/: image.png.json  ironman2.jpg.json  loginimg.jpg.json
smartprint/smartprint/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
smartprint/templates/: 404.html  Admindashboard.html  home.html  login.html  photoprint.html  userdashboard.html  vendor_pricing.html  vendor_register.html  vendordashboard.html
