[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.37",
    "channels>=4.2.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
    "websocket>=0.2.1",
    "django>=5.2.3",
    "pycups>=2.0.4",
]
